--- a/horizon/horizon/dashboards/nova/templates/nova/networks/_create.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/networks/_create.html
@@ -1,7 +1,7 @@
 {% extends 'nova/networks/_form.html' %}
 {%load i18n%}
 
-{% block submit %}
+{% block modal-footer %}
   <div class="modal-footer">
     <input class="btn primary pull-right" type="submit" value="{%trans "Create"%}" />
     <a href="#" class="btn secondary cancel close">Cancel</a>
