--- a/horizon/horizon/dashboards/nova/templates/nova/settings.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/settings.html
@@ -42,7 +42,7 @@
                     </select>
                   </div>
                 </div>
-                {% block submit %}
+                {% block modal-footer %}
                 <div class="modal-footer">
                   <input class="btn primary" type="submit" value="{% trans "Select Language" %}" />
                   <a href="#" class="btn secondary cancel close">Cancel</a>
