--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/tenants/_quotas_form.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/tenants/_quotas_form.html
@@ -6,7 +6,7 @@
     {{ field.errors }}
     {{ field }}
   {% endfor %}
-  {% block submit %}
+  {% block modal-footer %}
   {% endblock %}
 </form>
 
