--- a/horizon/horizon/templates/horizon/auth/_switch.html
+++ b/horizon/horizon/templates/horizon/auth/_switch.html
@@ -19,7 +19,7 @@
       </div>
     </div>
   {% endfor %}
-  {% block submit %}
+  {% block modal-footer %}
     <input class="btn primary" type="submit" value="{%trans "Login"%}" />
   {% endblock %}
   </fieldset>
