--- a/horizon/horizon/dashboards/nova/templates/nova/containers/_create.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/containers/_create.html
@@ -1,11 +1,24 @@
-{% extends 'nova/keypairs/_form.html' %}
+{% extends "horizon/common/_modal_form.html" %}
 {%load i18n%}
 
-{% block form_url %}{% url horizon:nova:containers:create %}{% endblock %}
+{% block form_id %}create_container_form{% endblock %}
+{% block form_action %}{% url horizon:nova:containers:create %}{% endblock %}
 
-{% block submit %}
-<div class="modal-footer">
-  <input class="btn primary pull-right" type="submit" value="{%trans "Create Keypair"%}" />
-  <a href="#" class="btn secondary cancel close">Cancel</a>
+{% block modal-header %}Create Container{% endblock %}
+
+{% block modal-body %}
+<div class="left">
+    <fieldset>
+        {% include "horizon/common/_form_fields.html" %}
+    </fieldset>
 </div>
+<div class="right">
+    <h3>{% trans "Description"%}:</h3>
+    <p>{% trans "A container is a storage compartment for your data and provides a way for you to organize your data. You can think of a container as a folder in Windows® or a directory in UNIX®. The primary difference between a container and these other file system concepts is that containers cannot be nested. You can, however, create an unlimited number of containers within your account. Data must be stored in a container so you must have at least one container defined in your account prior to uploading data."%}</p>
+</div>
+{% endblock %}
+
+{% block modal-footer %}
+  <input class="btn primary pull-right" type="submit" value="{% trans "Create Container" %}" />
+  <a href="{% url horizon:nova:containers:index %}" class="btn secondary cancel close">Cancel</a>
 {% endblock %}
