--- a/horizon/horizon/dashboards/nova/templates/nova/images/_delete.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/images/_delete.html
@@ -2,8 +2,8 @@
 <form id="form_delete_{{image.id}}" class="form-delete" method="post">
   {% csrf_token %}
   {% for hidden in form.hidden_fields %}
-    {{hidden}}
+    {{ hidden }}
   {% endfor %}
   <input name="image_id" type="hidden" value="{{image.id}}" />
-  <input id="delete_{{image.id}}" class="delete" title="Image: {{image.name}}" type="submit" value="{%trans "Delete"%}" />
+  <input id="delete_{{image.id}}" class="btn small delete danger" title="Image: {{image.name}}" type="submit" value="{%trans "Delete"%}" />
 </form>
