--- a/horizon/horizon/dashboards/nova/templates/nova/images/update.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/images/update.html
@@ -12,15 +12,5 @@
 {% endblock page_header %}
 
 {% block dash_main %}
-  <div class="dash_block">
-    <div class="left">
-      {% include 'nova/images/_form.html' %}
-    </div>
-
-    <div class="right">
-      <h3>{% trans "Description:"%}</h3>
-      <p>{% trans "From here you can modify different properties of an image."%}</p>
-    </div>
-    <div class="clear">&nbsp;</div>
-  </div>
+  {% include 'nova/images/_update.html' %}
 {% endblock %}
