--- a/horizon/horizon/dashboards/nova/templates/nova/instances/_snapshot.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/instances/_snapshot.html
@@ -1,9 +1,9 @@
 {% extends 'nova/instances/_form.html' %}
 {%load i18n%}
 
-{% block form_url %}{% url horizon:nova:snapshots:create instance.id %}{% endblock %}
+{% block form_action %}{% url horizon:nova:snapshots:create instance.id %}{% endblock %}
 
-{% block submit %}
+{% block modal-footer %}
 <div class="modal-footer">
   <input class="btn primary pull-right" type="submit" value="{%trans "Create Snapshot"%}" />
   <a href="#" class="btn secondary cancel close">Cancel</a>
