--- a/horizon/horizon/dashboards/nova/templates/nova/keypairs/_form.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/keypairs/_form.html
@@ -1,5 +1,5 @@
 {%load i18n%}
-<form id="import_keypair_form" action="{% block form_url %}{% endblock %}" method="post">
+<form id="import_keypair_form" action="{% block form_action %}{% endblock %}" method="post">
   {% csrf_token %}
   <fieldset>
     {% for hidden in form.hidden_fields %}
@@ -19,7 +19,7 @@
         </div>
       </div>
     {% endfor %}
-    {% block submit %}
+    {% block modal-footer %}
       <input type="submit" value="{%trans "Add Keypair" %}" />
     {% endblock %}
   </fieldset>
