--- a/horizon/horizon/dashboards/nova/templates/nova/security_groups/_create.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/security_groups/_create.html
@@ -1,9 +1,9 @@
 {% extends 'nova/security_groups/_form.html' %}
 {%load i18n%}
 
-{% block form_url %}{% url horizon:nova:security_groups:create %}{% endblock %}
+{% block form_action %}{% url horizon:nova:security_groups:create %}{% endblock %}
 
-{% block submit %}
+{% block modal-footer %}
 <div class="modal-footer">
   <input class="btn primary pull-right" type="submit" value="{%trans "Create Security Group"%}" />
   <a href="#" class="btn secondary cancel close">Cancel</a>
