--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/images/_update.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/images/_update.html
@@ -1,9 +1,9 @@
 {% extends 'syspanel/images/_form.html' %}
 {%load i18n%}
 
-{% block form_url %}{% url horizon:syspanel:images:update image.id %}{% endblock %}
+{% block form_action %}{% url horizon:syspanel:images:update image.id %}{% endblock %}
 
-{% block submit %}
+{% block modal-footer %}
 <div class="modal-footer">
   <input class="btn primary pull-right" type="submit" value="{%trans "Update Image"%}" />
   <a href="#" class="btn secondary cancel close">Cancel</a>
