--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/tenants/_create.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/tenants/_create.html
@@ -1,9 +1,9 @@
 {% extends 'syspanel/images/_form.html' %}
 {%load i18n%}
 
-{% block form_url %}{% url horizon:syspanel:tenants:create %}{% endblock %}
+{% block form_action %}{% url horizon:syspanel:tenants:create %}{% endblock %}
 
-{% block submit %}
+{% block modal-footer %}
 <div class="modal-footer">
   <input class="btn primary pull-right" type="submit" value="{%trans "Create Tenant"%}" />
   <a href="#" class="btn secondary cancel close">Cancel</a>
