--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/tenants/_update_quotas_form.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/tenants/_update_quotas_form.html
@@ -1,6 +1,6 @@
 {% extends "syspanel/tenants/_quotas_form.html" %}
 {%load i18n%}
 
-{% block submit %}
+{% block modal-footer %}
   <input type="submit" value="{% trans "Update Quotas"%}" class="large-rounded" />
 {% endblock %}
