--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/users/_create_form.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/users/_create_form.html
@@ -1,7 +1,7 @@
 {% extends "syspanel/users/_form.html" %}
 {%load i18n%}
 
-{% block submit %}
+{% block modal-footer %}
   <input type="submit" value="{% trans "Create User"%}" class="large-rounded" />
 {% endblock %}
 
