--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/users/_update.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/users/_update.html
@@ -1,9 +1,9 @@
 {% extends "syspanel/users/_form.html" %}
 {%load i18n%}
 
-{% block form_url %}{% url horizon:syspanel:users:create %}{% endblock %}
+{% block form_action %}{% url horizon:syspanel:users:create %}{% endblock %}
 
-{% block submit %}
+{% block modal-footer %}
 <div class="modal-footer">
   <input class="btn primary pull-right" type="submit" value="{%trans "Update User"%}" />
   <a href="#" class="btn secondary cancel close">Cancel</a>
