fixing swift bugs introduced with ui refactor
Change-Id: I94b0c7277ef5c7f806b97d23d97a27eab9caeb60

--- a/horizon/horizon/dashboards/nova/templates/nova/containers/_delete.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/containers/_delete.html
@@ -1,10 +1,10 @@
-{%load i18n%}
+{% load i18n %}
 <form id="form_delete_{{container.name}}" action="." class="form-delete" method="post">
   {% csrf_token %}
   {% for hidden in form.hidden_fields %}
-    {{hidden}}
+    {{ hidden }}
   {% endfor %}
-  <input name="container_name" type="hidden" value="{{container.name}}" />
-  <input id="delete_{{container.name}}" class="btn small delete" title="Container: {{container.name}}" type="submit" value="{%trans "Delete"%}" />
+  <input name="container_name" type="hidden" value="{{ container.name }}" />
+  <input id="delete_{{ container.name }}" class="btn small danger delete" title="Container: {{ container.name }}" type="submit" value="{% trans "Delete" %}" />
 </form>
 
