--- a/horizon/horizon/dashboards/nova/templates/nova/objects/_upload.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/objects/_upload.html
@@ -1,11 +1,11 @@
-{% extends 'nova/keypairs/_form.html' %}
-{%load i18n%}
+{% extends 'nova/objects/_form.html' %}
+{% load i18n %}
 
 {% block form_action %}{% url horizon:nova:containers:object_upload container_name %}{% endblock %}
 
 {% block modal-footer %}
 <div class="modal-footer">
-  <input class="btn primary pull-right" type="submit" value="{%trans "Upload Object"%}" />
+  <input class="btn primary pull-right" type="submit" value="{% trans "Upload Object" %}" />
   <a href="#" class="btn secondary cancel close">Cancel</a>
 </div>
 {% endblock %}
