--- a/horizon/horizon/dashboards/nova/templates/nova/objects/index.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/objects/index.html
@@ -19,7 +19,11 @@
   {% else %}
     <div class="alert-message block-message info">
       {% url horizon:nova:containers:object_upload container_name as dash_obj_up_url %}
-      <p><strong>{% trans "Info: "%}</strong>{% trans "There are currently no objects in the container."%} <a class="btn small" href='{{dash_obj_up_url}}'>{% trans "Object Upload Page"%}</a></p>
+      <p>
+        <strong>{% trans "Info: "%}</strong>
+        {% trans "There are currently no objects in the container."%}
+        <a class="btn small" href='{{dash_obj_up_url}}'>{% trans "Object Upload Page"%}</a>
+      </p>
     </div>
   {% endif %}
 {% endblock %}
