login dialog fix
Change-Id: If373fd10b285749503467ca5287ef86b48fdec1c

--- a/horizon/horizon/templates/horizon/auth/_login.html
+++ b/horizon/horizon/templates/horizon/auth/_login.html
@@ -2,6 +2,7 @@
 {% load i18n %}
 
 {% block modal-header %}Log In{% endblock %}
+{% block modal_class %}modal{% endblock %}
 
 {% block form-action %}{% url horizon:auth_login %}{% endblock %}
 
