--- a/horizon/horizon/dashboards/nova/templates/nova/instances/index.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/instances/index.html
@@ -11,12 +11,7 @@
   {% if instances %}
     {% include 'nova/instances/_list.html' %}
   {% else %}
-    <div class="alert-message block-message info">
-      <p><strong>{% trans "Info: "%}</strong>{% trans "There are currently no instances."%}</p>
-      <div class="alert-actions">
-        <a class="btn small" href='{% url horizon:nova:images:index %}'>{% trans "Images Page" %}.</a>
-      </div>
-    </div>
+    {% include 'nova/instances/_no_instances.html' %}
   {% endif %}
 {% endblock %}
 
