--- a/horizon/horizon/dashboards/nova/templates/nova/instances/usage.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/instances/usage.html
@@ -12,43 +12,43 @@
       <div class="usage_block first">
         <h3>CPU</h3>
         <ul>
-          <li><span class="quantity">{{usage.total_active_vcpus|default:0}}</span><span class="unit">Cores</span> Active</li>
-          <li><span class="quantity">{{usage.total_cpu_usage|floatformat|default:0}}</span><span class="unit">CPU-HR</span> Used</li>
+          <li><span class="quantity">{{ usage.total_active_vcpus|default:0 }}</span><span class="unit">Cores</span> Active</li>
+          <li><span class="quantity">{{ usage.total_cpu_usage|floatformat|default:0 }}</span><span class="unit">CPU-HR</span> Used</li>
         </ul>
       </div>
 
       <div class="usage_block">
         <h3>RAM</h3>
         <ul>
-          <li><span class="quantity">{{total_ram|default:0}}</span><span class="unit">{{ram_unit}}</span> Active</li>
+          <li><span class="quantity">{{ total_ram|default:0 }}</span><span class="unit">{{ ram_unit }}</span> Active</li>
         </ul>
       </div>
 
       <div class="usage_block last">
         <h3>Disk</h3>
         <ul>
-          <li><span class="quantity">{{usage.total_active_disk_size|default:0}}</span><span class="unit">GB</span> Active</li>
-          <li><span class="quantity">{{usage.total_disk_usage|floatformat|default:0}}</span><span class="unit">GB-HR</span> Used</li>
+          <li><span class="quantity">{{ usage.total_active_disk_size|default:0 }}</span><span class="unit">GB</span> Active</li>
+          <li><span class="quantity">{{ usage.total_disk_usage|floatformat|default:0 }}</span><span class="unit">GB-HR</span> Used</li>
         </ul>
       </div>
     </div>
 
     <div class='table_title wide'>
-      <a class="csv_download_link pull-right" href="{{ csv_link }}">{% trans "Download CSV"%} &raquo;</a>
+      <a class="csv_download_link pull-right" href="{{ csv_link }}">{% trans "Download CSV" %} &raquo;</a>
       <h3>Server Usage Summary</h3>
     </div>
 
     <table class="zebra-striped">
       <tr id='headings'>
-        <th>{% trans "ID"%}</th>
-        <th>{% trans "Name"%}</th>
-        <th>{% trans "User"%}</th>
-        <th>{% trans "VCPUs"%}</th>
-        <th>{% trans "Ram Size"%}</th>
-        <th>{% trans "Disk Size"%}</th>
-        <th>{% trans "Flavor"%}</th>
-        <th>{% trans "Uptime"%}</th>
-        <th>{% trans "Status"%}</th>
+        <th>{% trans "ID" %}</th>
+        <th>{% trans "Name" %}</th>
+        <th>{% trans "User" %}</th>
+        <th>{% trans "VCPUs" %}</th>
+        <th>{% trans "Ram Size" %}</th>
+        <th>{% trans "Disk Size" %}</th>
+        <th>{% trans "Flavor" %}</th>
+        <th>{% trans "Uptime" %}</th>
+        <th>{% trans "Status" %}</th>
       </tr>
       <tbody class='main'>
         {% for instance in instances %}
@@ -57,30 +57,24 @@
           {% else %}
             <tr class="{% cycle 'odd' 'even' %}">
           {% endif %}
-            <td>{{instance.id}}</td>
-            <td>{{instance.name}}</td>
-            <td>{{instance.user_id}}</td>
-            <td>{{instance.vcpus}}</td>
-            <td>{{instance.ram_size|mbformat}}</td>
-            <td>{{instance.disk_size}}GB</td>
-            <td>{{instance.flavor}}</td>
-            <td>{{instance.uptime_at|timesince}}</td>
-            <td>{{instance.state|lower|capfirst}}</td>
+            <td>{{ instance.id }}</td>
+            <td>{{ instance.name }}</td>
+            <td>{{ instance.user_id }}</td>
+            <td>{{ instance.vcpus }}</td>
+            <td>{{ instance.ram_size|mbformat }}</td>
+            <td>{{ instance.disk_size }}GB</td>
+            <td>{{ instance.flavor }}</td>
+            <td>{{ instance.uptime_at|timesince }}</td>
+            <td>{{ instance.state|lower|capfirst }}</td>
         </tr>
         {% empty %}
           <tr>
-              <td colspan=9>{% trans "No active instances."%}</td>
+              <td colspan=9>{% trans "No active instances." %}</td>
           </tr>
         {% endfor %}
       </tbody>
     </table>
   {% else %}
-  <div class="alert-message block-message info">
-    <p><strong>{% trans "Info: "%}</strong>{% trans "There are currently no instances."%}</p>
-    <div class="alert-actions">
-      <a class="btn small" href='{{ dash_img_url }}'>{% trans "Images Page" %}.</a>
-    </div>
-  </div>
+    {% include 'nova/instances/_no_instances.html' %}
   {% endif %}
-
 {% endblock %}
