Various fixes for swift UI.
Paging controls no longer show when there are exactly "limit" number items.
Primary actions more clear.
Styles in-line with rest of Horizon.
Filter form now pages plus some test fixes.
Better Swift pagination limit default and comment in local_settings.py

Change-Id: I288c17471624c3a90a886726af60f7c3c8f8c9b7

--- a/horizon/horizon/dashboards/nova/templates/nova/containers/_list.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/containers/_list.html
@@ -21,9 +21,11 @@
   </tr>
   {% endfor %}
   </tbody>
+  {% if more %}
   <tfoot>
     <tr>
       <td colspan="2">{% object_paging containers %}</td>
     </tr>
   </tfoot>
+  {% endif %}
 </table>
