--- a/horizon/horizon/dashboards/nova/templates/nova/floating_ips/_allocate.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/floating_ips/_allocate.html
@@ -4,5 +4,5 @@
   {% for hidden in form.hidden_fields %}
     {{hidden}}
   {% endfor %}
-  <input class="btn small" type="submit" value="{%trans "Allocate IP"%}" />
+  <input class="btn small primary" type="submit" value="{%trans "Allocate IP"%}" />
 </form>
