--- a/horizon/horizon/dashboards/nova/templates/nova/keypairs/index.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/keypairs/index.html
@@ -32,8 +32,8 @@
     <div class="alert-message block-message info">
       <p><strong>{% trans "Info: "%}</strong>{% trans "There are currently no keypairs."%}</p>
       <div class="alert-actions">
-        <a id="keypairs_import_link" class="btn primary small" data-controls-modal="import_keypair_modal" data-backdrop="static" href="{% url horizon:nova:keypairs:import %}">{% trans "Import Keypair"%}</a>
-        <a id="keypairs_create_link" class="btn small" data-controls-modal="create_keypair_modal" data-backdrop="static" href="{% url horizon:nova:keypairs:create %}">{% trans "Create New Keypair"%}</a>
+        <a id="keypairs_create_link" class="btn primary small" data-controls-modal="create_keypair_modal" data-backdrop="static" href="{% url horizon:nova:keypairs:create %}">{% trans "Create New Keypair"%}</a>
+        <a id="keypairs_import_link" class="btn small" data-controls-modal="import_keypair_modal" data-backdrop="static" href="{% url horizon:nova:keypairs:import %}">{% trans "Import Keypair"%}</a>
       </div>
     </div>
   {% endif %}
