--- a/horizon/horizon/dashboards/nova/templates/nova/networks/index.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/networks/index.html
@@ -11,12 +11,12 @@
   {% if networks %}
     {% include 'nova/networks/_list.html' %}
     {% url horizon:nova:networks:create as dash_net_url %}
-    <a id="network_create_link" class="btn small" href="{{dash_net_url}}">{% trans "Create New Network"%}</a>
+    <a id="network_create_link" class="btn small" href="{{ dash_net_url }}">{% trans "Create New Network" %}</a>
   {% else %}
     <div class="alert-message block-message info">
-      <p><strong>{% trans "Info: "%}</strong>{% trans "There are currently no networks."%}</p>
+      <p><strong>{% trans "Info: " %}</strong>{% trans "There are currently no networks." %}</p>
       <div class="alert-actions">
-        <a class="btn small" href='{% url horizon:nova:networks:create %}'>{% trans "Create A Network"%}</a>
+        <a class="btn small primary" href='{% url horizon:nova:networks:create %}'>{% trans "Create A Network" %}</a>
       </div>
     </div>
   {% endif %}
