--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/base.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/base.html
@@ -7,6 +7,7 @@
 {% block main %}
   <div class="content">
     {% block page_header %}{% endblock %}
+    {% include "_messages.html" %}
     {% block syspanel_main %}{% endblock %}
   </div>
 {% endblock %}
