Accounts for non-standard width of the splash modal for centering.
Change-Id: I1078c1d25e64568bd6bc77c339a5bc84e26e5979

--- a/openstack-dashboard/dashboard/static/dashboard/css/style.css
+++ b/openstack-dashboard/dashboard/static/dashboard/css/style.css
@@ -60,6 +60,7 @@ html, #splash{
   width: 390px;
   padding-top: 170px;
   border: 1px solid #e1e1e1;
+  margin-left: -195px;  /*accounts for splash's non-standard width */
 }
 
 #create_container_form .modal-footer{
