--- a/horizon/horizon/dashboards/nova/templates/nova/objects/_upload.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/objects/_upload.html
@@ -3,6 +3,7 @@
 
 {% block form_id %}upload_object_form{% endblock %}
 {% block form_action %}{% url horizon:nova:containers:object_upload container_name %}{% endblock %}
+{% block form_attrs %}enctype="multipart/form-data"{% endblock %}
 
 {% block modal-header %}Upload Object To Container: {{ container_name }}{% endblock %}
 
