--- a/horizon/horizon/dashboards/nova/templates/nova/images/_list.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/images/_list.html
@@ -1,7 +1,5 @@
-{% load i18n %}
+{% load i18n parse_date launch_form %}
 
-{% load parse_date %}
-{% load launch_form %}
 <table id="images" class="zebra-striped">
   <tr>
     <th>{%trans "ID"%}</th>
