Dashboards can now add an attribute that indicates the dashboard has support for tenants/projects.
Change-Id: I505d22f808a34cf43921ebb716f599459f5c9095

--- a/horizon/horizon/templates/horizon/common/_sidebar.html
+++ b/horizon/horizon/templates/horizon/common/_sidebar.html
@@ -8,6 +8,7 @@
     </ul>
   </div>
 
+  {% if request.horizon.dashboard.supports_tenants %}
   <div id="tenant_switcher" class="switcher_bar">
     <a id="current_tenant" class="current_item" href="{% url horizon:nova:overview:index %}">
       <h4>Project</h4>
@@ -22,6 +23,7 @@
       {% endfor %}
     </ul>
   </div>
+  {% endif %}
 
   {% horizon_dashboard_nav %}
 </div>
