--- a/horizon/horizon/dashboards/nova/templates/nova/images/_list.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/images/_list.html
@@ -1,29 +1,48 @@
 {% load i18n parse_date launch_form %}
 
-<table id="images" class="zebra-striped">
-  <tr>
-    <th>{%trans "ID"%}</th>
-    <th>{%trans "Name"%}</th>
-    <th>{%trans "Created"%}</th>
-    <th>{%trans "Updated"%}</th>
-    <th colspan="2">{%trans "Status"%}</th>
-  </tr>
+
+<div class="table_title">
+  <h3>Images and Snapshots</h3>
+  <div class="table_actions">
+    <div class="images table_search">
+      <form action="#">
+        <input class="span3" type="text">
+      </form>
+    </div>
+    <a class="inspect" href="#">{% trans "inspect" %}</a>
+  </div>
+</div>
+
+<table id="images" class="zebra-striped sortable">
+  <thead>
+    <tr>
+      <th></th>
+      <th>{% trans "Name" %}</th>
+      <th>{% trans "Type" %}</th>
+      <th>{% trans "Status" %}</th>
+      <th colspan="2">{% trans "Actions" %}</th>
+    </tr>
+  </thead>
   {% for image in images %}
   <tr class="{% cycle 'odd' 'even' %}">
-      <td>{{image.id}}</td>
+      <td class="select">
+        <input type="checkbox" name="image_{{image.id}}" value="image_{{image.id}}" id="image_select_{{image.id}}" />
+      </td>
       <td>{{image.name}}</td>
-      <td>{{image.created_at|parse_date}}</td>
-      <td>{{image.updated_at|parse_date}}</td>
+      <td>{{image.properties.image_type|default:"Image"}}</td>
       <td>{{image.status|capfirst}}</td>
-      <td id="actions">
-          <ul>
-            <li>{{ image.request.user.id }}<a class="btn small primary" data-controls-modal="launch_image_{{image.id}}" data-backdrop="static" href="{% url horizon:nova:images:launch image.id %}">{% trans "Launch" %}</a></li>
-            {% if image.owner == request.user.tenant_id %}
-            <li class="form">{% include "nova/images/_delete.html" with form=delete_form %}</li>
-            <li><a class='btn small' href="{% url horizon:nova:images:update image.id %}">{% trans "Edit" %}</a></li>
-            {% endif %}
-          </ul>
-        </td>
+      <td>
+        <a class="btn small primary" data-controls-modal="launch_image_{{image.id}}" data-backdrop="static" href="{% url horizon:nova:images:launch image.id %}">{% trans "Launch" %}</a>
+      </td>
+      <td id="name_{{image.name}}" class="actions">        
+        {% if image.owner == request.user.tenant_id %}
+        <a class="more-actions" href="#">View</a>
+        <ul>
+          <li><a class='btn small' href="{% url horizon:nova:images:update image.id %}">{% trans "Edit" %}</a></li>
+          <li class="form">{% include "nova/images/_delete.html" with form=delete_form %}</li>
+        </ul>
+        {% endif %}
+      </td>
   </tr>
   {% endfor %}
 </table>
