--- a/openstack-dashboard/dashboard/static/dashboard/css/style.css
+++ b/openstack-dashboard/dashboard/static/dashboard/css/style.css
@@ -28,25 +28,25 @@ a {
 }
 
 ul {
-	list-style: none;
-	margin: 0;
+    list-style: none;
+    margin: 0;
 }
 
 .page-header {
-	background: #f2f2f2;
-	height: 31px;
-	display: block;
-	border-bottom: 1px solid #e5e5e5;
-	padding: 17px;
-	margin-left: -25px;
-	margin-right: -25px;
-	font-family: anivers;
+    background: #f2f2f2;
+    height: 31px;
+    display: block;
+    border-bottom: 1px solid #e5e5e5;
+    padding: 17px;
+    margin-left: -25px;
+    margin-right: -25px;
+    font-family: anivers;
 }
 
 h2 {
-	color: #6a6a6a;
-	font-size: 30px;
-	font-weight: normal;
+    color: #6a6a6a;
+    font-size: 30px;
+    font-weight: normal;
 }
 
 /* Login Splash Page */
@@ -64,28 +64,28 @@ html, #splash{
 }
 
 #create_container_form .modal-footer{
-	margin-top: 190px;
+    margin-top: 190px;
 }
 
 .nav li a {
-	color: #8EACB7;
-	background: transparent !important;
-	text-shadow: none;
+    color: #8EACB7;
+    background: transparent !important;
+    text-shadow: none;
 }
 
 #container {
-	padding: 0;
+    padding: 0;
 }
 .container-fluid > .content {
   margin-left: 225px;
-	padding-left: 25px;
-	padding-right: 25px;
+    padding-left: 25px;
+    padding-right: 25px;
 }
 
 .sidebar {
-	background: #edf9ff;
-	border-right: 5px solid #e5e5e5;
-	border-bottom: 5px solid #e5e5e5;
+    background: #edf9ff;
+    border-right: 5px solid #e5e5e5;
+    border-bottom: 5px solid #e5e5e5;
 }
 
 .sidebar h4 {
@@ -98,26 +98,26 @@ html, #splash{
 }
 
 .tabs li.active a {
-	background: #edf9ff;
+    background: #edf9ff;
 }
 
 h1.brand {
-	width: 100%;
-	margin: 0;
-	background-color: #f5f5f5;
+    width: 100%;
+    margin: 0;
+    background-color: #f5f5f5;
     padding-bottom: 40px;
 }
 
 h1.brand a {
-	background: url(../images/logo.png) top left no-repeat;
-	display: block;
-	float: left;
-	width: 116px;
-	height: 123px;
-	text-indent: -9999px;
-	margin-left: 56px;
-	margin-top: 15px;
-	margin-bottom: 25px;
+    background: url(../images/logo.png) top left no-repeat;
+    display: block;
+    float: left;
+    width: 116px;
+    height: 123px;
+    text-indent: -9999px;
+    margin-left: 56px;
+    margin-top: 15px;
+    margin-bottom: 25px;
 }
 
 
@@ -125,53 +125,53 @@ h1.brand a {
 
 
 a.current_item {
-	width: 163px;
-	float: left;
+    width: 163px;
+    float: left;
 }
 
 a.current_item:hover {
-	text-decoration: none;
+    text-decoration: none;
 }
 
 a.current_item:hover h3, a.current_item:hover h4 {
-	color: #39738c;
+    color: #39738c;
 }
 
 .switcher_bar h3 {
-	color: #4790ae;
-	font-size: 16px;
-	margin: -20px 0 0 10px;
-	padding: 0;
+    color: #4790ae;
+    font-size: 16px;
+    margin: -20px 0 0 10px;
+    padding: 0;
 }
 
 .switcher_bar h4 {
-	color: #6fabc4;
-	font-size: 10px;
-	text-transform: uppercase;
-	font-weight: normal;
-	margin: -10px 0 0 10px;
-	padding: 0;
+    color: #6fabc4;
+    font-size: 10px;
+    text-transform: uppercase;
+    font-weight: normal;
+    margin: -10px 0 0 10px;
+    padding: 0;
 }
 
 .switcher_bar {
-	background: #e9f5fa;
-	width: 190px;
-	height: 38px;
-	padding: 5px 0 0 0;
-	border: 1px solid #c0d9e4;
-	margin-left: 14px;
+    background: #e9f5fa;
+    width: 190px;
+    height: 38px;
+    padding: 5px 0 0 0;
+    border: 1px solid #c0d9e4;
+    margin-left: 14px;
     margin-bottom: 15px;
 }
 
 .switcher_bar ul {
-	background: #c9e1ea;
-	right: 0px;
-	border: 1px solid #c0d9e4;
-	margin: 37px 0 0 -1px;
-	list-style: none;
-	display: none;
-	width: 190px;
-	position: relative;
+    background: #c9e1ea;
+    right: 0px;
+    border: 1px solid #c0d9e4;
+    margin: 37px 0 0 -1px;
+    list-style: none;
+    display: none;
+    width: 190px;
+    position: relative;
 }
 
 .drop_btn {
@@ -182,7 +182,7 @@ a.current_item:hover h3, a.current_item:hover h4 {
   height: 29px;
   border: 1px solid #c0d9e4;
   text-indent: -9999px;
-	margin: -5px 0 0;
+    margin: -5px 0 0;
 }
 .drop_btn:hover { background-color: #c9e1ea; }
 
@@ -197,25 +197,25 @@ a.current_item:hover h3, a.current_item:hover h4 {
 
 
 #usage {
-	margin-bottom: 25px;
-	height: 125px;
+    margin-bottom: 25px;
+    height: 125px;
 }
 
 .usage_block {
-	  background: #e8f8ff;
+      background: #e8f8ff;
   color: #84b6c5;
   border: 1px solid #afe3fb;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
-	float: left;
-	width: 29%;
-	margin-right: 5%;
-	min-height: 125px;
+    float: left;
+    width: 29%;
+    margin-right: 5%;
+    min-height: 125px;
 }
 
 .usage_block.last {
-	margin-right: 0;
+    margin-right: 0;
 }
 
 
@@ -233,7 +233,7 @@ a.current_item:hover h3, a.current_item:hover h4 {
   border-top-right-radius: 5px;
 }
 .usage_block ul {
-	margin: 10px;
+    margin: 10px;
 }
 
 .usage_block .quantity { font-size: 25px; }
@@ -250,42 +250,43 @@ a.current_item:hover h3, a.current_item:hover h4 {
 }
 
 .table_title h3 {
-	font-family: anivers;
-	font-weight: normal;
-	font-size: 24px;
-	margin-bottom: 5px;
+    font-family: anivers;
+    font-weight: normal;
+    font-size: 24px;
+    margin-bottom: 5px;
+    float: left;
 }
 th {
-	background: #f1f1f1;
+    background: #f1f1f1;
 }
 
 
 small {
-	font-size: 11px;
+    font-size: 11px;
 }
 .csv_download_link {
-	margin-top: 11px;
-	font-size: 11px;
+    margin-top: 11px;
+    font-size: 11px;
 }
 
 #user_info {
-	position: relative;
-	z-index: 100;
-	padding-right: 25px;
-	padding-top: 25px;
-	color: #888;
+    position: relative;
+    z-index: 100;
+    padding-right: 25px;
+    padding-top: 25px;
+    color: #888;
 }
 
 #user_info a {
-	margin-left: 25px;
-	font-size: 11px !important;
+    margin-left: 25px;
+    font-size: 11px !important;
 }
 
 .main_nav {
-	list-style: none;
-	width: 222px;
-	float: left;
-	margin-bottom: 15px;
+    list-style: none;
+    width: 222px;
+    float: left;
+    margin-bottom: 15px;
 }
 
 .main_nav a {
@@ -305,8 +306,8 @@ small {
 }
 
 table form {
-	margin-bottom: 0;
-	width: 1px;
+    margin-bottom: 0;
+    width: 1px;
 }
 
 .modal > form,
@@ -315,7 +316,7 @@ table form {
 }
 
 #actions.single {
-	width: 90px;
+    width: 90px;
 }
 
 .zebra-striped tr td {
@@ -327,27 +328,34 @@ table form {
 }
 
 .inspect {
-	float: left;
-	display: block;
-	margin-top: 5px;
-	margin-right: 25px;
+    float: left;
+    display: block;
+    margin-top: 5px;
+    margin-right: 25px;
 }
 
 .table_actions {
-	float: right;
-	margin-top: -45px;
-	min-width: 469px;
+    float: right;
+    min-width: 400px;
 }
 
 .table_actions .table_search {
-	float: left;
-	margin-right: 25px;
+    float: right;
 }
 
 .table_search input {
-	background: url(../images/search.png) no-repeat 137px 5px;
+    background: url(../images/search.png) no-repeat 137px 5px;
 }
 
+.table_actions a{
+    float: right;
+    margin-left: 10px;
+}
+
+.table_actions form {
+    float: right;
+    margin-left: 10px;
+}
 
 .hidden {
   display: none;
@@ -372,7 +380,7 @@ table form {
 }
 
 .status_box.good li.block {
-	color: #7ec67b;
+    color: #7ec67b;
 }
 
 .status_box.medium {
@@ -388,7 +396,7 @@ table form {
 }
 
 .overview {
-	font-size: 24px;
+    font-size: 24px;
 }
 
 .status_box.medium .status span, .status_box.medium .overview { color: #d1b100; }
@@ -509,36 +517,36 @@ table form {
 }
 
 #monitoring h3{
-	font-size: 13px;
-	font-weight: normal;
-	float: left;
-	margin-top: -8px;
+    font-size: 13px;
+    font-weight: normal;
+    float: left;
+    margin-top: -8px;
 }
 
 #external_links, #external_links li {
-	float: left;
+    float: left;
 }
 #external_links li { margin: 0 0 0 15px; }
 
 /* Forms */
 
 .modal label {
-	text-align: left;
-	color: #555;
-	font-weight: bold;
+    text-align: left;
+    color: #555;
+    font-weight: bold;
 }
 
 .input {
-	width: 100%;
-	float: left;
-	margin: 0 !important;
+    width: 100%;
+    float: left;
+    margin: 0 !important;
 }
 
 .modal {
-	width: 700px;
-	top: 80px;
-	margin-top: 0;
-	position: absolute;
+    width: 700px;
+    top: 80px;
+    margin-top: 0;
+    position: absolute;
 }
 
 .modal.static_page {
@@ -549,10 +557,10 @@ table form {
 }
 
 .modal .left {
-	float: left;
-	width: 342px;
-	margin-right: 25px;
-	margin-left: 10px;
+    float: left;
+    width: 342px;
+    margin-right: 25px;
+    margin-left: 10px;
 }
 
 .left form {
@@ -560,34 +568,34 @@ table form {
 }
 
 .modal .right {
-	float: left;
-	width: 285px;
+    float: left;
+    width: 285px;
 }
 
 .clear {
-	clear: both;
-	width: 0;
-	height: 0;
-	padding: 0;
-	margin: 0;
+    clear: both;
+    width: 0;
+    height: 0;
+    padding: 0;
+    margin: 0;
 }
 
 .modal fieldset {
-	margin: 0;
-	padding: 0;
-	width: 372px;
+    margin: 0;
+    padding: 0;
+    width: 372px;
 }
 
 .modal fieldset input, .modal fieldset select, .modal fieldset textarea, .modal fieldset ul {
-	width: 90%;
+    width: 90%;
 }
 
 .modal ul.chzn-choices {
-	width: 342px;
+    width: 342px;
 }
 
 .modal .modal-footer input {
-	width: auto;
+    width: auto;
 }
 
 .modal-body {
@@ -595,32 +603,32 @@ table form {
 }
 
 .modal .modal-body .modal-footer {
-	width: 670px;
-	margin-left: -25px;
-	margin-right: -15px;
+    width: 670px;
+    margin-left: -25px;
+    margin-right: -15px;
 }
 
 .modal-footer a.close {
   margin-top: 0;
-	margin-right: 5px;
-	font-size: 12px;
-	color: #999;
-	font-weight: normal;
+    margin-right: 5px;
+    font-size: 12px;
+    color: #999;
+    font-weight: normal;
   filter: alpha(opacity=100);
   -khtml-opacity: 1;
   -moz-opacity: 1;
 }
 
 .modal-footer a.close:hover {
-	color: #333;
-	text-decoration: underline;
+    color: #333;
+    text-decoration: underline;
 }
 
 .modal .help-block {
-	text-align: left;
-	float: left;
-	width: 100%;
-	margin-bottom: 10px;
+    text-align: left;
+    float: left;
+    width: 100%;
+    margin-bottom: 10px;
 }
 
 #create_keypair_modal .clearfix {
@@ -633,19 +641,19 @@ table form {
 }
 
 #security_group_rule_modal .left fieldset {
-	width: 163px;
+    width: 163px;
 }
 
 #security_group_rule_modal .left .help-inline {
-	float: left;
+    float: left;
 }
 
 #security_group_rule_modal .right {
-	width: 475px;
+    width: 475px;
 }
 
 #security_group_rule_modal .right table {
-	margin-top: 31px;
+    margin-top: 31px;
 }
 
 table tr.odd.good td { border: 1px solid #92fd75; }
@@ -671,19 +679,84 @@ tfoot tr td { border-top: 1px solid #DDD }
 .odd.bad:hover, .even.bad:hover { background: #ff9899; }
 
 #actions {
-	width: 90px;
+    width: 90px;
 }
 #actions .btn {
-	margin-bottom: 5px;
+    margin-bottom: 5px;
 }
 #actions a.btn {
-	width: 70px;
+    width: 70px;
 }
 
 #actions input.btn {
-	text-align: left;
+    text-align: left;
 }
 
 #images #actions {
-	width: 100px;
+    width: 100px;
+}
+
+/*New List Patches*/
+.details-modal .modal-body {
+  padding-bottom: 20px;
+}
+.form-inline {
+  display: inline;
+}
+
+td.select {
+  width: 10px;
+}
+
+/* Actions dropdown */
+
+td.actions {
+  width: 150px;
+  padding: 10px;
+}
+
+td.actions a.more-actions {
+  display: block;
+  float: left;
+  width: 132px;
+  padding: 10px;
+  background: url(../images/right_droparrow.png) no-repeat 130px;
+}
+
+td.actions a.more-actions:hover, td.actions a.more-actions.active {
+  background: #cdcdcd url(../images/drop_arrow.png) no-repeat 125px;
+
+}
+
+td.actions ul {
+  background: #e1e1e1;
+  float: left;
+  width: 150px;
+  position: absolute;
+  padding-bottom: 10px;
+  border: 1px solid #cacaca;
+  padding-top: 10px;
+  display: none;
+  margin-top: 37px;
+}
+
+td.actions ul.active {
+  display: block;
+}
+
+td.actions ul li {
+  padding: 5px 10px;
+}
+
+td.actions ul li a {
+  width: 110px;
+}
+
+td.actions ul li input {
+  width: 129px;
+  text-align: left;
+}
+
+td.actions ul {
+  display: none;
 }
