Converts keypairs to use the new ajax modal dialogs.
Incidentally updates jQuery to 1.7.1 and uses the "on" method instead of "live"
for click handling as per Tres' comment.

Adds a common "main_content" id to all the base.html templates for uniformity.

Change-Id: I667cfaa72b9b85883a86649a666e75e4d501b93e

--- a/horizon/horizon/dashboards/nova/templates/nova/keypairs/import.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/keypairs/import.html
@@ -2,27 +2,10 @@
 {% load i18n %}
 
 {% block page_header %}
-  {# to make searchable false, just remove it from the include statement #}
-  {% include "horizon/common/_page_header.html" with title=_("Create Keypair") %}
+  {% include "horizon/common/_page_header.html" with title=_("Import Keypair") %}
 {% endblock page_header %}
 
 {% block dash_main %}
-<div id="import_keypair_modal" class="modal">
-  <div class="modal-header">
-    <a href="#" class="close">&times;</a>
-    <h3>Import Keypair</h3>
-  </div>
-  <div class="modal-body">
-    <div class="left">
-      {% include 'nova/keypairs/_import.html' with form=import_form %}
-    </div>
-    <div class="right">
-      <h3>{% trans "Description"%}:</h3>
-      <p>{% trans "Keypairs are ssh credentials which are injected into images when they are launched. Creating a new key pair registers the public key and downloads the private key (a .pem file)."%}</p>
-      <p>{% trans "Protect and use the key as you would any normal ssh private key."%}</p>
-    </div>
-    <div class="clear">&nbsp;</div>
-  </div>
-</div>
+  {% include 'nova/keypairs/_import.html' %}
 {% endblock %}
 
