--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/base.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/base.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-  <div class="content">
+  <div id='main_content' class="content">
     {% block page_header %}{% endblock %}
     {% include "_messages.html" %}
     {% block syspanel_main %}{% endblock %}
