--- a/horizon/horizon/dashboards/nova/templates/nova/keypairs/_list.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/keypairs/_list.html
@@ -4,8 +4,8 @@
   <h3>{% trans "Keypairs" %}</h3>
 
   <div class="table_actions">
-    <a id="keypairs_import_link" class="btn primary small" data-controls-modal="import_keypair_modal" data-backdrop="static" href="{% url horizon:nova:keypairs:import %}">{% trans "Import Keypair"%}</a>
-    <a id="keypairs_create_link" class="btn small" data-controls-modal="create_keypair_modal" data-backdrop="static" href="{% url horizon:nova:keypairs:create %}">{% trans "Create New Keypair"%}</a>
+    <a id="keypairs_import_link" class="btn primary small ajax-modal" data-controls-modal="import_keypair_modal" data-backdrop="static" href="{% url horizon:nova:keypairs:import %}">{% trans "Import Keypair"%}</a>
+    <a id="keypairs_create_link" class="btn small ajax-modal" data-controls-modal="create_keypair_modal" data-backdrop="static" href="{% url horizon:nova:keypairs:create %}">{% trans "Create New Keypair"%}</a>
 
     <div class="keypairs table_search">
       <form action="#">
