--- a/horizon/horizon/dashboards/nova/templates/nova/keypairs/create.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/keypairs/create.html
@@ -1,39 +1,11 @@
 {% extends 'nova/base.html' %}
 {% load i18n %}
 
-{% block headerjs %}
-  <script type="text/javascript" charset="utf-8">
-    $(function(){
-      $(".left h3").hide()
-      $("form input[type='submit']").click(function(e){
-        $("form").hide("fast")
-        $(".left h3").show("fast")
-      })
-    })
-  </script>
-{% endblock %}
-
 {% block page_header %}
-  {# to make searchable false, just remove it from the include statement #}
   {% include "horizon/common/_page_header.html" with title=_("Create Keypair") %}
 {% endblock page_header %}
 
 {% block dash_main %}
-  <div id="import_keypair_modal" class="modal static_page">
-    <div class="modal-header">
-      <h3>Create Keypair</h3>
-    </div>
-    <div class="modal-body">
-      <div class="left">
-        {% include 'nova/keypairs/_create.html' with form=create_form %}
-        <h3><a href="{% url horizon:nova:keypairs:index %}"><< {% trans "Return to keypairs list"%}</a></h3>
-      </div>
-      <div class="right">
-        <h3>{% trans "Description"%}:</h3>
-        <p>{% trans "Keypairs are ssh credentials which are injected into images when they are launched. Creating a new key pair registers the public key and downloads the private key (a .pem file)."%}</p>
-        <p>{% trans "Protect and use the key as you would any normal ssh private key."%}</p>
-      </div>
-    </div>
-  </div>
+  {% include 'nova/keypairs/_create.html' %}
 {% endblock %}
 
