Moving login error messages into the login dialog.
Fixing broken test and removing duplicate tenant_delete function.

Change-Id: I1dd20221c0ca4155e1005e229d70aeffc76bd633

--- a/horizon/horizon/templates/horizon/auth/_login.html
+++ b/horizon/horizon/templates/horizon/auth/_login.html
@@ -7,6 +7,14 @@
 {% block form-action %}{% url horizon:auth_login %}{% endblock %}
 
 {% block modal-body %}
+  {% for message in messages %}
+    {% if message.tags == "login error" %}
+    <div class="alert-message error">
+      <strong>{% trans "Error: " %}</strong>
+      {{ message }}
+    </div>
+    {% endif %}
+  {% endfor %}
   <fieldset>
     {% include "horizon/common/_form_fields.html" %}
   </fieldset>
