Cleanup of splash page error messages and keystone error handling.
Removed several templates which have not been in use for some time.

Moved messages tempalte snippet into horizon since we're using it
there and it's generic anyway.

Fixed bug 871871.

Change-Id: I4c9aa22e022b41c5d353c05b0b32cf3e85c376ea

--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/base.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/base.html
@@ -7,7 +7,7 @@
 {% block main %}
   <div id='main_content' class="content">
     {% block page_header %}{% endblock %}
-    {% include "_messages.html" %}
+    {% include "horizon/_messages.html" %}
     {% block syspanel_main %}{% endblock %}
   </div>
 {% endblock %}
