--- a/horizon/horizon/templates/horizon/auth/_login.html
+++ b/horizon/horizon/templates/horizon/auth/_login.html
@@ -7,14 +7,7 @@
 {% block form-action %}{% url horizon:auth_login %}{% endblock %}
 
 {% block modal-body %}
-  {% for message in messages %}
-    {% if message.tags == "login error" %}
-    <div class="alert-message error">
-      <strong>{% trans "Error: " %}</strong>
-      {{ message }}
-    </div>
-    {% endif %}
-  {% endfor %}
+  {% include "horizon/_messages.html" %}
   <fieldset>
     {% include "horizon/common/_form_fields.html" %}
   </fieldset>
