CSS layout fix to make sure title elements are properly cleared.
Fixed bug 900535.

Change-Id: I835c849c6c3d67ba88cdc1dd44ade9d2091f428b

--- a/openstack-dashboard/dashboard/static/dashboard/css/style.css
+++ b/openstack-dashboard/dashboard/static/dashboard/css/style.css
@@ -249,6 +249,10 @@ a.current_item:hover h3, a.current_item:hover h4 {
   padding: 0 0 0 1px;
 }
 
+.table_title {
+  overflow: auto; /* Triggers clearing if all contained elements are floated */
+}
+
 .table_title h3 {
     font-family: anivers;
     font-weight: normal;
