fixing url error which occurs when you attach a volume
Change-Id: I5cd6525bdad0a47a01a6a20d7642a0689699b347

--- a/horizon/horizon/dashboards/nova/templates/nova/instances_and_volumes/volumes/_list.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/instances_and_volumes/volumes/_list.html
@@ -35,7 +35,7 @@
       <td>      
         {% for attachment in volume.attachments %}
           {% if attachment %}
-            <a href="{% url horizon:nova:instances_and_volumes:instances:detail request.user.tenant_name attachment.serverId %}">
+            <a href="{% url horizon:nova:instances_and_volumes:instances:detail attachment.serverId %}">
             {# TODO(jake): Make this the instance name #}
             Instance {{ attachment.serverId }}
             <small>({{ attachment.device }})</small>
