Fixes the syspanel instances page after instances_and_volumes merge.
Change-Id: If16fc61d20f9d09d96ac311f841df15ae704d5a8

--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/instances/detail.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/instances/detail.html
@@ -52,7 +52,7 @@
     </div>
 
     <div id="log" class="tab_wrapper">
-      <a class="view_full" target="_blank" href="{% url horizon:nova:instances:console instance.id %}">View Full Log</a>
+      <a class="view_full" target="_blank" href="{% url horizon:nova:instances_and_volumes:instances:console instance.id %}">View Full Log</a>
       <pre class="logs"></pre>
     </div>
 
@@ -91,7 +91,7 @@
     })
 
     function getlog(){
-      $.get("{% url horizon:nova:instances:console instance.id %}?length=25", function(data){
+      $.get("{% url horizon:nova:instances_and_volumes:instances:console instance.id %}?length=25", function(data){
         $("#log .logs").html(data)
       })
     }
