Adds a named view for sending users to the appropriate home page.
Fixes bug 893219.

Change-Id: I6698cc3261d2f9e62b36684bedcad0a4a52b26a9

--- a/horizon/horizon/templates/horizon/common/_sidebar.html
+++ b/horizon/horizon/templates/horizon/common/_sidebar.html
@@ -1,7 +1,7 @@
 {% load horizon i18n %}
 
 <div class='sidebar'>
-  <h1 class="brand clearfix"><a href="{% url splash %}">{% trans "OpenStack Dashboard"%}</a></h1>
+  <h1 class="brand clearfix"><a href="{% url horizon:user_home %}">{% trans "OpenStack Dashboard"%}</a></h1>
   <div class='clearfix'>
     <ul class="tabs">
       {% horizon_main_nav %}
